force-app/main/default/objects/PSA_Training_Error_Log__c/PSA_Training_Error_Log__c.object-meta.xml
<CustomObject>
    <description>create information about the error occur during the integration from sumtotal to the sales force like did not find matching account name, class name etc.</description>
    <label>PSA Training Error Log</label>
    <nameField>
        <displayFormat>EL{00000}</displayFormat>
        <label>PSA Training Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Training Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>