force-app/main/default/objects/PSA_Training_Error_Log__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>map the company name of the sum total</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>