force-app/main/default/objects/PSA_Training_Error_Log__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <description>information about the error. The</description>
    <label>Error Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>