force-app/main/default/objects/PSA_Training_Error_Log__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>used to map the user name or Email Id from sumtotal.</description>
    <label>User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>