force-app/main/default/objects/PSA_Training_Error_Log__c/recordTypes/PSA_Training_Error_Log.recordType-meta.xml
<RecordType>
    <fullName>PSA_Training_Error_Log</fullName>
    <active>true</active>
    <description>PSA Training Error Log</description>
    <label>PSA Training Error Log</label>
</RecordType>