force-app/main/default/objects/PSA_Training_Error_Log__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Error_Log__c</columns>
    <columns>User_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>